Decrease padding and width on tooltips to prevent horizontal scrollbar
When hovering over the rightmost order button, the tooltip was wide enough to
create overflow on the night, causing a scrollbar to appear. These changes
narrow the tooltip so that doesn't happen.

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -314,10 +314,10 @@
     > span {
       z-index: 10;
       display: none;
-      padding: 14px 20px;
+      padding: 10px 10px;
       margin-top: -12px;
       margin-left: 20px;
-      width: 170px;
+      width: 165px;
       line-height: 16px;
       border-radius: 4px;
       box-shadow: 5px 5px 8px #ccc;
